--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -1,5 +1,5 @@
 @misc{Bodt2019b,
-    author = {Aaley and Bodt, Uday Raj; and A., Timotheus},
+    author = {Aaley, Uday Raj and Bodt, Timotheus A.},
     doi = {10.5281/zenodo.3377537},
     journal = {In preparation},
     title = {Kusunda 250 Word List Audio Files},
