put "and" between two authors

--- a/raw/sources.bib
+++ b/raw/sources.bib
@@ -1,5 +1,5 @@
 @MISC{Bodt2019b,
-  author      = {Aaley, Uday Raj; Bodt, Timotheus A.},
+  author      = {Aaley, Uday Raj and Bodt, Timotheus A.},
   title       = {Kusunda 250 Word List Audio Files},
   journal     = {In preparation},
   year        = {2019},
