update the citation

--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -1,7 +1,9 @@
-@misc{Bodt2019b,
+@article{Bodt2019b,
     author = {Aaley, Uday Raj and Bodt, Timotheus A.},
-    doi = {10.5281/zenodo.3377537},
-    journal = {In preparation},
-    title = {Kusunda 250 Word List Audio Files},
-    year = {2019}
+    date = {2020},
+    day = {08},
+    journal = {Computer-Assisted Language Comparison in Practice},
+    month = {apr},
+    title = {New Kusunda data: A list of 250 concepts},
+    url = {https://calc.hypotheses.org/2414}
 }
