--- a/raw/sources.bib
+++ b/raw/sources.bib
@@ -1,7 +1,9 @@
-@MISC{Bodt2019b,
+@article{Bodt2019b,
   author      = {Aaley, Uday Raj and Bodt, Timotheus A.},
-  title       = {Kusunda 250 Word List Audio Files},
-  journal     = {In preparation},
-  year        = {2019},
-  doi        = {10.5281/zenodo.3377537},
+  title       = {New Kusunda data: A list of 250 concepts},
+  journal     = {Computer-Assisted Language Comparison in Practice},
+  date        = {2020},
+  month = {apr},
+  day = {08},
+  url	= {https://calc.hypotheses.org/2414},
 }
