--- a/raw/sources.bib
+++ b/raw/sources.bib
@@ -1,9 +1,10 @@
 @article{Bodt2019b,
-  author      = {Aaley, Uday Raj and Bodt, Timotheus A.},
-  title       = {New Kusunda data: A list of 250 concepts},
-  journal     = {Computer-Assisted Language Comparison in Practice},
-  date        = {2020},
-  month = {apr},
-  day = {08},
-  url	= {https://calc.hypotheses.org/2414},
+	title        = {New Kusunda data: A list of 250 concepts},
+	author       = {Aaley, Uday Raj and Bodt, Timotheus A.},
+	year         = {2020},
+	journal      = {Computer-Assisted Language Comparison in Practice},
+	volume       = {3},
+	url          = {https://calc.hypotheses.org/2414},
+	date         = {2020-04-08}
 }
+
