--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -1,9 +1,9 @@
 @article{Bodt2019b,
     author = {Aaley, Uday Raj and Bodt, Timotheus A.},
-    date = {2020},
-    day = {08},
+    date = {2020-04-08},
     journal = {Computer-Assisted Language Comparison in Practice},
-    month = {apr},
     title = {New Kusunda data: A list of 250 concepts},
-    url = {https://calc.hypotheses.org/2414}
+    url = {https://calc.hypotheses.org/2414},
+    volume = {3},
+    year = {2020}
 }
