--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -2,6 +2,7 @@
     author = {Aaley, Uday Raj and Bodt, Timotheus A.},
     date = {2020-04-08},
     journal = {Computer-Assisted Language Comparison in Practice},
+    number = {4},
     title = {New Kusunda data: A list of 250 concepts},
     url = {https://calc.hypotheses.org/2414},
     volume = {3},
