--- a/raw/sources.bib
+++ b/raw/sources.bib
@@ -4,6 +4,7 @@
 	year         = {2020},
 	journal      = {Computer-Assisted Language Comparison in Practice},
 	volume       = {3},
+	number	     = {4},
 	url          = {https://calc.hypotheses.org/2414},
 	date         = {2020-04-08}
 }
